              more than the data width and the maximum code size is 12.  (Note
              that GIF spec prohibits anything more than 8).

              pnmpsnr: Add -targetX options.

              ppmrainbow: Add "ppmrainbow: " to error messages, like other
              programs.

              ppmrainbow: improve error message.
              
              ppmpat: Fix bug - crash or junk output with -camo or -anticamo
              and no -color.  Introduced in Netpbm 10.78 (March 2017).

              Build: fix compile failure on systems without strnlen (such
              as MacOS X before 10.7).  Broken in 10.81 (December 2017).

17.12.30 BJH  Release 10.81.00

              sldtoppm: -lib and -dir don't work - always says slide not
              found.  Broken in Netpbm 10.63 (June 2013).

              sldtoppm: fix bug: says AutoCAD slide file isn't an AutoCAD
              slide file.  Broken after Netpbm 10.26 (January 2005), but no
              later than 10.35 (August 2006).

              sldtoppm: fix bug: wild memory accesses, weird messages when
              invalid input file has unterminated strings.
              
17.09.30 BJH  Release 10.80.00

              pnmtopalm: Refuse to create a compressed image with more than 8
              bits per pixel.

              pbmtext, libnetpbm font facilities: allow glyphs in font files
              that have no bitmap data; just used for their advance value to
              code a space.

              pbmtext: Improve error message when there is a problem reading
              the font file.

              libnetpbm font facilities: consider font invalid if a glyph is
              more than 65536 pixels high or wide.

              ppmshadow: handle images with a black background and low
              contrast images (i.e. little difference between foreground and
              background).

              ppmbrighten: fix bug: red pixels change hue.  Introduced in